infra/openshift/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: adaezel/cloud-todo:frontend-v1.0.0
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "20m"
              memory: "64Mi"
            limits:
              cpu: "100m"
              memory: "128Mi"
